update questions feature done

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon run server.js",
-    "SqlServer": "psql postgresql://postgres:password@localhost:5432/JEE_Royale_Service"
+    "SqlServer": "psql postgresql://postgres:password@localhost:5432/JEE_Royale_Service",
+    "UDP": "nodemon run UDP_SERVER_CONNECTION.js"
   },
   "keywords": [],
   "author": "",
