--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,22 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.js"
-      }
-    ]
+  "build": {
+    "env": {
+      "DATABASE_URL": "@your-database-url"
+    }
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api"
+    }
+  ],
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x",
+      "includeFiles": "prisma/schema.prisma"
+    }
+  },
+  "commands": {
+    "build": "prisma generate && next build"
   }
-  
+}
