added .env to .gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules
 # Keep environment variables out of version control
+.env
 testEndPoint.bat
 testLoginEndPoint.bat
 testStartSessionEndPoint.bat
